# xynergy

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/: requirements.txt
docs/source/: conf.py  factor.rst  fit.rst  impute.rst  index.rst  plot.rst  reference.rst  synergy.rst  tidy.rst  usage.rst  xynergy.rst
tests/: test_example.py  test_factor.py  test_fit.py  test_impute.py  test_reference.py  test_streamlit_app.py  test_synergy.py  test_tidy.py  test_util.py
xynergy/: __init__.py  _meta.py  clnmf.py  dev.py  example.py  factor.py  fit.py  impute.py  kais_lnmf.py  lnmf.py  mpl_plots.py  plot.py  reference.py  scores.py  synergy.py  test.py  tidy.py  util.py  validate.py  wip2_lnmf.py  wip_lnmf.py  xynergy.py
xynergy/example_data/: data.xlsx
