[project]
name = "xynergy"
dynamic = ["version"]
description = "Drug synergy from minimum drug combination data"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "KaziLab", email = "xynergy@kazilab.se" },
]
keywords = [
    "drug synergy",
    "drug combinations",
    "bioinformatics",
    "matrix factorization",
    "high-throughput screening",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "lmfit>=1.3.3",
    "numpy-typing>=1.1.1",
    "numpy>=2.2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.0",
    "polars>=1.26.0",
    "scikit-learn>=1.6.1",
    "xgboost>=3.0.0",
    "nimfa>=1.4.0",
    "cvxpy>=1.6.5",
    "optuna>=4.3.0",
    "altair>=5.5.0",
    "pyarrow>=20.0.0",
    "plotly>=6.0.0",
    "streamlit>=1.40.0",
    "matplotlib>=3.9.0",
    "scipy>=1.14.0",
]

[dependency-groups]
dev = [
    "coverage>=7.7.1",
    "debugpy>=1.8.13",
    "gnureadline>=8.2.13 ; platform_system == 'Darwin'",
    "readline>=6.2.4.2 ; platform_system == 'Linux'",
    "pytest-cov>=6.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "pdoc>=15.0.3",
    "basedpyright>=1.29.1",
    "sphinx>=8.2.3",
    "snowballstemmer==2.2.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-autobuild>=2024.10.3",
    "isort>=6.0.1",
    "ty>=0.0.0a8",
    "rstfmt>=0.0.14",
    "vl-convert-python>=1.7.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/xynergy",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
include = ["/xynergy/example_data/data.xlsx"]
packages = ["xynergy"]

[tool.hatch.version]
path = "xynergy/_meta.py"

[tool.basedpyright]
typeCheckingMode = "off"

[tool.coverage.run]
omit = ["tests/*.py"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
select = [
  "D",
  "I"
]

ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
